# Cession-App

./: .gitignore  ANDROID_BUILD_GUIDE.md  ANDROID_TROUBLESHOOTING.md  AUTO_UPDATE_ANALYSIS.md  AUTO_UPDATE_COMPLETE_ANALYSIS.md  AUTO_UPDATE_COMPLETE_FIX_SUMMARY.md  AUTO_UPDATE_QUICK_STEPS.md  AUTO_UPDATE_SETUP.md  AUTO_UPDATE_UI_FIX_ANALYSIS.md  AUTO_UPDATE_UI_FIX_SUMMARY.md  COMPLETE_UPDATE_FIX_v1.0.41.md  CUSTOM_UPDATER_IMPLEMENTATION.md  DANGER_CLIENTS_FIX_SUMMARY.md  DEFAULT_USER_IMPLEMENTATION.md  DEPLOYMENT.md  ERROR_32_BATCH_SCRIPT_FIX.md  ERROR_32_COMPLETE_FIX.md  FILE_HANDLE_FIX.md  NO_TERMINAL_WINDOWS_FIX.md  PRODUCTION_DEPLOYMENT.md  README.md  RELEASE_AUTOMATION_SUMMARY.md  RELEASE_BUILDER_GUIDE.md  RELEASE_PROCESS.md  START_HERE.md  TAURI_SETUP.md  WINDOWS_SMART_APP_CONTROL_FIX.md  apply-premium-styles.ps1  build-android.ps1  build-production.ps1  build-release.ps1  build-tauri.ps1  build-v1.0.36.ps1  build-v1.0.38.ps1  build-v1.0.41.ps1  build.ps1  complete-inventory-features.js  copy-backend-jar.ps1  copy-dev-db-to-production.ps1  copy-jar-to-tauri.bat  (+46 more)
.expo/: شهادة خلاص و رفع يد عدنان عكايشي.docx
TestSprite_Analysis_Report_2025-08-17/: ANALYSIS_COMPLETE.md  QUICK_REFERENCE_INDEX.md  README.md
backend/: Dockerfile  EXPORT_INTEGRATION.md  pom.xml
database/: schema.sql  update_schema.sql  users_schema.sql
frontend/: Dockerfile  README.md  jsconfig.json  (+9 more)
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs  updater.rs
(+453 files in other folders)
